# PaperAgent

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  pyproject.toml
backend/paperagent/: __init__.py  __main__.py
docs/: user-guide.md
docs/adr/: 0001-system-boundaries.md  0002-professional-document-layout-reference-boundary.md
docs/release/: RELEASE_CANDIDATE.json  RELEASE_NOTES_0.1.0.md  sbom.cdx.json
docs/security/: threat-model.md
docs/user/: file-first-data.md
example/: prompt.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  PreviewPane.tsx  main.tsx  styles.css  vite-env.d.ts
installer/: paperagent.iss
knowledge/builtin/: CHANGELOG.md  LICENSE.txt  manifest.yaml
launcher/: __init__.py  main.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_memory.py  0003_provider_settings.py  0004_workspace_conversations.py  0005_durable_runs.py  0006_parallel_resources.py  0007_steering.py  0008_provider_domains.py  0009_provider_binding_backfill.py  0010_execution_artifacts.py  0011_artifact_backfill.py  0012_document_revisions.py  0013_asset_manifests.py  0014_document_deliveries.py  0015_document_presentation.py  0016_document_numbering.py
scripts/: build_release.ps1  check-agent-kernel.ps1  check-interactive-workspace.ps1  check-release-candidate.ps1  check.ps1  check_agent_kernel.py  check_architecture.py  check_repo_hygiene.py  clean_conversation_cache.py  dev.ps1  generate_release_manifest.py  generate_sbom.py  install-source-shortcut.ps1  install-user.ps1  live_api_agent_turn_test.py  live_configured_provider_test.py  live_full_paper_test.py  live_provider_test.py  live_typography_render_test.py  p10_document_delivery_certification.py  rollback-user.ps1  start-local.ps1  test-live-provider.ps1  test-local.ps1  uninstall-user.ps1  validate_fixtures.py  verify_release.py
tests/contract/: test_p10_document_layout_regressions.py  test_p12_document_presentation_contracts.py  test_p13_layout_baseline_contracts.py  test_p2_provider_contract.py  test_p3_literature_contract.py  test_p7_visual_provider.py
tests/e2e/: test_p1_workflow.py  test_p2_settings_memory.py  test_p3_knowledge_workflow.py  test_p4_preview_workflow.py  test_p5_agent_workflow.py  test_p7_experiment_workflow.py  test_p8_release_workflow.py  test_p9_controlled_delivery.py
tests/fault/: test_p11_document_delivery_recovery.py  test_p8_fault_matrix.py
tests/fixtures/: manifest.json
tests/golden/: test_p6_multiformat_corpus.py
tests/integration/: test_agent_job_api.py  test_agent_loop.py  test_conversation_engine.py  test_default_interactive_execution.py  test_document_revision_api.py  test_durable_runs.py  test_dynamic_interactive_graph.py  test_orchestration_runtime.py  test_p11_asset_manifest_migration.py  test_p11_document_delivery_regressions.py  test_p11_multiformat_delivery.py  test_p11_render_preflight_delivery.py  test_p3_indexes.py  (+19 more)
(+310 files in other folders)
